--- a/demos/index.html
+++ b/demos/index.html
@@ -22,48 +22,46 @@
   <script src="./assets/d3-4.10.0.min.js"></script>
   <script src="../build/data-set.js"></script>
   <script>
-    $.getJSON('../test/fixtures/diamond.json', (data) => {
+    $.getJSON('../test/fixtures/diamond.json', data => {
       const randomX = d3.randomNormal(500, 80);
       const randomY = d3.randomNormal(500, 80);
-      const points = d3.range(2000).map(() => {
+      data = d3.range(2000).map(() => {
         return {
           carat: randomX(),
           price: randomY()
         };
       });
       const ds = new DataSet();
-      // const dv = ds.createView('diamond').source(data)
-      console.log(points);
-      const dv = ds.createView('diamond').source(points)
+      const dv = ds.createView('diamond').source(data);
       dv.transform({
         type: 'bin.hexagon',
         fields: [ 'carat', 'price' ],
-        bins: [ 10, 10 ],
+        bins: [ 10, 10 ]
         // radiusByCount: true // calculate bin radius by binning count
       }).transform({
         type: 'sortBy',
-        fields: ['count'],
+        fields: [ 'count' ],
         order: 'ASC'
-      })
+      });
       const chart = new G2.Chart({
         container: 'canvas',
         forceFit: true,
         height: window.innerHeight
-      })
+      });
       chart.source(dv, {
         x: {
           alias: '克拉数'
         },
         y: {
           alias: '价格（元）'
-        },
-      })
-      chart.tooltip(false)
+        }
+      });
+      chart.tooltip(false);
       chart.polygon()
         .position('x*y')
-        .color('count', ['rgb(200, 200, 255)', 'rgb(0, 0, 255)'])
-      chart.render()
-    })
+        .color('count', [ 'rgb(200, 200, 255)', 'rgb(0, 0, 255)' ]);
+      chart.render();
+    });
   </script>
 </body>
 
