--- a/demos/index.html
+++ b/demos/index.html
@@ -10,6 +10,7 @@
 <ul>
   <li>
     <a href="./hexagon-binning.html">Hexagon Binning</a>
+    <a href="./tag-cloud.html">Tag Cloud</a>
   </li>
 </ul>
 </body>
