fixing binning logic and demos

--- a/demos/index.html
+++ b/demos/index.html
@@ -9,7 +9,9 @@
 <body>
 <ul>
   <li>
+    <a href="./bar.html">Bar Plot</a>
     <a href="./hexagon-binning.html">Hexagon Binning</a>
+    <a href="./histogram-binning.html">Histogram Binning</a>
     <a href="./tag-cloud.html">Tag Cloud</a>
   </li>
 </ul>
