--- a/demos/bar.html
+++ b/demos/bar.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./assets/common.css">
-  <title>data-set demos</title>
+  <title>Bar</title>
 </head>
 
 <body>
