--- a/demos/index.html
+++ b/demos/index.html
@@ -12,6 +12,8 @@
     <a href="./bar.html">Bar Plot</a>
     <a href="./hexagon-binning.html">Hexagon Binning</a>
     <a href="./histogram-binning.html">Histogram Binning</a>
+    <a href="./quantile-binning.html">Quantile Binning</a>
+    <a href="./rectangle-binning.html">Rectangle Binning</a>
     <a href="./tag-cloud.html">Tag Cloud</a>
   </li>
 </ul>
