--- a/demos/index.html
+++ b/demos/index.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Demos</title>
+  <title>DataSet Demos</title>
 </head>
+
 <body>
-<ul>
-  <li>
-    <a href="./bar.html">Bar Plot</a>
-    <a href="./hexagon-binning.html">Hexagon Binning</a>
-    <a href="./histogram-binning.html">Histogram Binning</a>
-    <a href="./quantile-binning.html">Quantile Binning</a>
-    <a href="./rectangle-binning.html">Rectangle Binning</a>
-    <a href="./tag-cloud.html">Tag Cloud</a>
-  </li>
-</ul>
+  <ul>
+    <li>
+      <a href="./bar.html">Bar Plot</a>
+    </li>
+    <li>
+      <a href="./geo-projections.html">Geo Projections</a>
+    </li>
+    <li>
+      <a href="./hexagon-binning.html">Hexagon Binning</a>
+    </li>
+    <li>
+      <a href="./histogram-binning.html">Histogram Binning</a>
+    </li>
+    <li>
+      <a href="./quantile-binning.html">Quantile Binning</a>
+    </li>
+    <li>
+      <a href="./rectangle-binning.html">Rectangle Binning</a>
+    </li>
+    <li>
+      <a href="./tag-cloud.html">Tag Cloud</a>
+    </li>
+  </ul>
 </body>
+
 </html>
