diffs are too large

--- a/demos/geo-projections.html
+++ b/demos/geo-projections.html
@@ -135,8 +135,8 @@
   <div id="canvas"></div>
   <script src="./assets/lodash-4.17.4.min.js"></script>
   <script src="./assets/jquery-3.2.1.min.js"></script>
-  <!-- <script src="./assets/g2.min.js"></script> -->
-  <script src="./assets/g2.js"></script>
+   <script src="./assets/g2.min.js"></script>
+  <!--<script src="./assets/g2.js"></script>-->
   <script src="../build/data-set.js"></script>
   <script>
     // $.getJSON('../test/fixtures/china-geo.1.json', data => {
