--- a/demos/histogram-binning.html
+++ b/demos/histogram-binning.html
@@ -10,29 +10,37 @@
 </head>
 
 <body>
-  <div id="canvas"></div>
-  <script src="./assets/jquery-3.2.1.min.js"></script>
-  <script src="./assets/g2.min.js"></script>
-  <script src="../build/data-set.js"></script>
-  <script>
-    $.getJSON('../test/fixtures/diamond.json', data => {
-      const ds = new DataSet();
-      const dv = ds.createView('diamond').source(data);
-      dv.transform({
-        type: 'bin.histogram',
-        field: 'depth',
-        as: [ 'depth', 'count' ]
-      });
-      const chart = new G2.Chart({
-        container: 'canvas',
-        forceFit: true,
-        height: window.innerHeight
-      });
-      chart.source(dv);
-      chart.interval().position('depth*count');
-      chart.render();
+<div id="canvas"></div>
+<script src="./assets/jquery-3.2.1.min.js"></script>
+<script src="./assets/g2.min.js"></script>
+<script src="../build/data-set.js"></script>
+<script>
+  $.getJSON('../test/fixtures/diamond.json', data => {
+    const ds = new DataSet();
+    const dv = ds.createView('diamond').source(data);
+    dv.transform({
+      type: 'bin.histogram',
+      field: 'depth',
+      binWidth: 1,
+      offset: 0.3,
+      as: [ 'depth', 'count' ]
     });
-  </script>
+    const chart = new G2.Chart({
+      container: 'canvas',
+      forceFit: true,
+      height: window.innerHeight
+    });
+    chart.source(dv);
+    chart.interval()
+      .position('depth*count')
+      .color('yellow')
+      .style({
+        stroke: 'green',
+        lineWidth: 1
+      });
+    chart.render();
+  });
+</script>
 </body>
 
 </html>
