hexagon binning with offset

--- a/demos/rectangle-binning.html
+++ b/demos/rectangle-binning.html
@@ -27,8 +27,8 @@
     // sizeByCount: true, // calculate bin size by binning count
     type: 'bin.rectangle',
     fields: [ 'x', 'y' ],
+    // offset: [ -0.1, -0.1 ],
     binWidth: [ 1, 1 ]
-    // offset: [ -0.1, -0.1 ]
   });
   const chart = new G2.Chart({
     container: 'canvas',
