link for regression demo

--- a/demos/index.html
+++ b/demos/index.html
@@ -29,6 +29,9 @@
       <a href="./rectangle-binning.html">Rectangle Binning</a>
     </li>
     <li>
+      <a href="./regression.html">Regression</a>
+    </li>
+    <li>
       <a href="./tag-cloud.html">Tag Cloud</a>
     </li>
   </ul>
