--- a/demos/index.html
+++ b/demos/index.html
@@ -9,32 +9,21 @@
 </head>
 
 <body>
-  <ul>
-    <li>
-      <a href="./bar.html">Bar Plot</a>
-    </li>
-    <li>
-      <a href="./geo-projections.html">Geo Projections</a>
-    </li>
-    <li>
-      <a href="./hexagon-binning.html">Hexagon Binning</a>
-    </li>
-    <li>
-      <a href="./histogram-binning.html">Histogram Binning</a>
-    </li>
-    <li>
-      <a href="./quantile-binning.html">Quantile Binning</a>
-    </li>
-    <li>
-      <a href="./rectangle-binning.html">Rectangle Binning</a>
-    </li>
-    <li>
-      <a href="./regression.html">Regression</a>
-    </li>
-    <li>
-      <a href="./tag-cloud.html">Tag Cloud</a>
-    </li>
-  </ul>
+<ul>
+  <li><a href="./arc.html">Arc Diagram</a></li>
+  <li><a href="./bar.html">Bar Plot</a></li>
+  <li><a href="./chord.html">Chord Diagram</a></li>
+  <li><a href="./folding.html">Folding</a></li>
+  <li><a href="./geo-projections.html">Geo Projections</a></li>
+  <li><a href="./hexagon.html">Hexagon Binning</a></li>
+  <li><a href="./histogram.html">Histogram Binning</a></li>
+  <li><a href="./histogram-stack.html">Histogram Binning: Stack</a></li>
+  <li><a href="./partition.html">Partition</a></li>
+  <li><a href="./quantile.html">Quantile Binning</a></li>
+  <li><a href="./rectangle.html">Rectangle Binning</a></li>
+  <li><a href="./regression.html">Regression</a></li>
+  <li><a href="./tag-cloud.html">Tag Cloud</a></li>
+</ul>
 </body>
 
 </html>
