demo: interval => intervalStack

--- a/demos/histogram-stack.html
+++ b/demos/histogram-stack.html
@@ -41,7 +41,7 @@
         }
       }
     });
-    chart.interval()
+    chart.intervalStack()
       .position('depth*count')
       .color('cut')
       .style({
