kernel-smooth: density

--- a/demos/kernel-smooth-regression-2.html
+++ b/demos/kernel-smooth-regression-2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>kernel smooth transform: regression for one field</title>
+  <title>kernel smooth transform: regression for two fields</title>
 </head>
 <body>
 <div id="canvas"></div>
