--- a/demos/kernel-smooth-regression-2.html
+++ b/demos/kernel-smooth-regression-2.html
@@ -64,6 +64,7 @@
         method,
         fields: [ 'carat', 'price' ],
         as: [ 'carat', 'price' ],
+        bandwidth: 0.5,
         extent: [ 0, 4 ]
       });
 
