feat: #5 start point of better scripts

--- a/demos/tag-cloud.html
+++ b/demos/tag-cloud.html
@@ -40,66 +40,66 @@
         });
       }
     });
-    const imageMask = new Image();
-    imageMask.crossOrigin = '';
-    imageMask.src = 'https://zos.alipayobjects.com/rmsportal/EEFqYWuloqIHRnh.jpg';
-    imageMask.onload = () => {
-      $.getJSON('../test/fixtures/g2pv.json', data => {
-        const ds = new DataSet();
-        const dv = ds.createView('g2pv').source(data);
-        dv.transform({
-          type: 'tag-cloud',
-          fields: [ 'site', 'pv' ],
-          font: 'Impact',
-          imageMask,
-          size: [ window.innerWidth, window.innerHeight ],
-          padding: 1,
-          text(d) {
-            const site = d.site;
-            let index = site.indexOf('.');
-            let text = site;
-            if (index > 0 && index < site.length) {
-              text = site.substr(0, index);
+//    const imageMask = new Image();
+//    imageMask.crossOrigin = '';
+//    imageMask.src = 'https://zos.alipayobjects.com/rmsportal/EEFqYWuloqIHRnh.jpg';
+//    imageMask.onload = () => {
+    $.getJSON('../test/fixtures/g2pv.json', data => {
+      const ds = new DataSet();
+      const dv = ds.createView('g2pv').source(data);
+      dv.transform({
+        type: 'tag-cloud',
+        fields: [ 'site', 'pv' ],
+        font: 'Impact',
+//          imageMask,
+        size: [ window.innerWidth, window.innerHeight ],
+        padding: 1,
+        text(d) {
+          const site = d.site;
+          let index = site.indexOf('.');
+          let text = site;
+          if (index > 0 && index < site.length) {
+            text = site.substr(0, index);
               // 当字符串是'www'时获取下一个
-              if (text === 'www') {
-                text = site.substr(index + 1);
-                index = text.indexOf('.');
-                text = text.substr(0, index);
-              }
-              // 当字符串是数字时获取整个网址
-              if (/^[0-9]*$/g.test(text)) {
-                text = site;
-              }
+            if (text === 'www') {
+              text = site.substr(index + 1);
+              index = text.indexOf('.');
+              text = text.substr(0, index);
             }
-            return text;
-          },
-          fontSize(d) {
-            const max = dv.max('pv');
-            const min = dv.min('pv');
-            return ((d.pv - min) / (max - min)) * (80 - 14) + 14;
+              // 当字符串是数字时获取整个网址
+            if (/^[0-9]*$/g.test(text)) {
+              text = site;
+            }
           }
-        });
-        const chart = new G2.Chart({
-          container: 'canvas',
-          forceFit: true,
-          height: window.innerHeight
-        });
-        chart.source(dv);
-        chart.legend(false);
-        chart.axis(false);
-        chart.tooltip({
-          title: false
-        });
-        chart.coord().reflect();
-        chart.point()
+          return text;
+        },
+        fontSize(d) {
+          const max = dv.max('pv');
+          const min = dv.min('pv');
+          return ((d.pv - min) / (max - min)) * (80 - 14) + 14;
+        }
+      });
+      const chart = new G2.Chart({
+        container: 'canvas',
+        forceFit: true,
+        height: window.innerHeight
+      });
+      chart.source(dv);
+      chart.legend(false);
+      chart.axis(false);
+      chart.tooltip({
+        title: false
+      });
+      chart.coord().reflect();
+      chart.point()
           .position('x*y')
           .color('text')
           .size('size', size => size)
           .shape('cloud');
-        chart.tooltip('site*pv');
-        chart.render();
-      });
-    };
+      chart.tooltip('site*pv');
+      chart.render();
+    });
+//    };
   </script>
 </body>
 
