--- a/demos/adjacency.html
+++ b/demos/adjacency.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Adjacency Diagram</title>
+  <link rel="stylesheet" href="./assets/common.css">
 </head>
 <body>
 <div id="canvas"></div>
