--- a/demos/kernel-smooth-density.html
+++ b/demos/kernel-smooth-density.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>kernel smooth transform: density</title>
+  <link rel="stylesheet" href="./assets/common.css">
 </head>
 <body>
 <div id="canvas"></div>
