--- a/demos/kernel-smooth-regression-1.html
+++ b/demos/kernel-smooth-regression-1.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>kernel smooth transform: regression for one field</title>
+  <link rel="stylesheet" href="./assets/common.css">
 </head>
 <body>
 <div id="canvas"></div>
