chore(demo): add treemap demo and fix some other demos

--- a/demos/kernel-smooth-density.html
+++ b/demos/kernel-smooth-density.html
@@ -18,6 +18,7 @@
       forceFit: true,
       height: window.innerHeight
     });
+    chart.legend(false);
 
     const dv = new DataSet.View().source(data);
     dv.transform({
