fix(transform): waffle transform default width step is 0

--- a/demos/waffle.html
+++ b/demos/waffle.html
@@ -39,7 +39,8 @@
     })
     .transform({
       type: 'waffle',
-      maxCount: 500,
+//      maxCount: 500,
+//      scale: 0.00002,
       groupBy: 'State'
     });
 
