--- a/demos/kde.html
+++ b/demos/kde.html
@@ -6,43 +6,165 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./assets/common.css">
-  <title>Histogram</title>
+  <title>Violin Diagram</title>
+  <style>
+    html, body {
+      font-family: "-apple-system", BlinkMacSystemFont, "Segoe UI", Roboto,"Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei",SimSun, "sans-serif";
+    }
+  </style>
 </head>
 
 <body>
-<div id="canvas"></div>
+  <div id="control-panel" style="text-align: center;">
+    <label for="bandwidth">bandwidth</label>
+    <input id="bandwidth" type="range" min="0.01" max="0.5" step="0.005">
+    <span id="bandwidth-value" style="display: inline-block; width: 40px;"></span>
+  </div>
+<div id="canvas" style="border: 1px solid grey; border-radius: 4px;"></div>
 <script src="./assets/jquery-3.2.1.min.js"></script>
 <script src="./assets/g2.min.js"></script>
 <script src="../build/data-set.js"></script>
 <script>
+  G2.track(false);
   $.getJSON('../test/fixtures/iris-en.json', data => {
-    const ds = new DataSet();
-    const dv = ds.createView().source(data);
-    dv
-      .transform({
-        type: 'kde',
-        // bandwidth: 0.3,
-        fields: [ 'petalWidth', 'petalLength', 'sepalWidth', 'sepalLength' ]
-      });
+    const $bw = $('#bandwidth');
+    const $bwVal = $('#bandwidth-value');
+    $bwVal.text($bw.val());
+
+    const ds = new DataSet({
+      state: {
+        bandwidth: parseFloat($bw.val(), 10)
+      }
+    });
+
+    // input 值变更时更新 bandwidth 值
+    $bw.on('input', () => {
+      ds.setState('bandwidth', parseFloat($bw.val()));
+      $bwVal.text($bw.val());
+    });
+
+    const fields = [ 'petalWidth', 'petalLength', 'sepalWidth', 'sepalLength' ];
+
+    // 小提琴图用 KDE transform 提供数据
+    const dv1 = ds.createView({
+      watchingStates: [ 'bandwidth' ] // 根据 bandwidth state 重新计算
+    }).source(data);
+    dv1.transform({
+      type: 'kde',
+      bandwidth: '$state.bandwidth',
+      fields,
+      groupBy: [ 'species' ],
+      minSize: 0.0001 // 小于这个值的概率将被忽略
+    });
     const chart = new G2.Chart({
       container: 'canvas',
       forceFit: true,
-      height: window.innerHeight
-    });
-    chart.source(dv);
-    chart.axis('depth', {
-      grid: {
-        lineStyle: {
-          stroke: '#d9d9d9',
-          lineWidth: 1,
-          lineDash: [ 2, 2 ]
+      height: window.innerHeight - 40,
+      padding: 'auto',
+      theme: {
+        widthRatio: {
+          column: 0.9 // 小提琴图最宽处占总宽度的比例
         }
       }
     });
-    chart.interval()
-      .position('key*x')
-      // .shape('smooth')
-      .color('key');
+    // 需要根据分组提供分位值等统计数据，所以提前拍平数据
+    const dv2 = ds.createView().source(data);
+    dv2.transform({
+      type: 'fold',
+      fields
+    });
+    // 计算 Q1 和 Q3 分位值，用于画分位线
+    const dv3 = ds.createView().source(dv2);
+    dv3.transform({
+      type: 'bin.quantile',
+      field: 'value',
+      as: 'y',
+      groupBy: [ 'key', 'species' ],
+      p: [ 1 / 4, 3 / 4 ]
+    });
+    // 计算中位值
+    const dv4 = ds.createView().source(dv2);
+    dv4.transform({
+      type: 'aggregate',
+      fields: [ 'value' ],
+      operations: [ 'median' ],
+      as: [ 'y' ],
+      groupBy: [ 'key', 'species' ]
+    });
+
+    chart.scale({
+      key: { sync: true }, // key 字段在其中一个 view 映射到 color 了，在其他所以需要同步，否则
+      y: { sync: true }
+    });
+
+    // chart.tooltip(false);
+    chart.coord().transpose();
+    chart.axis('key', {
+      tickLine: {
+        alignWithLabel: false
+      }
+    });
+    chart.axis('y', {
+      line: G2.Global.axis.top.line,
+      tickLine: G2.Global.axis.top.tickLine,
+      grid: null
+    });
+
+    // 小提琴图
+    const view1 = chart.view();
+    view1.source(dv1);
+    view1.violin()
+      .position('key*y')
+      .color('key')
+      // .shape('hollow')
+      .size('size')
+      .style({
+        lineWidth: 1,
+        fillOpacity: 0.5,
+        strokeOpacity: 0.5
+      })
+      .tooltip(false);
+
+    // Q1 / Q3
+    const view3 = chart.view();
+    view3.source(dv3);
+    view3.interval()
+      .position('key*y')
+      .color('black')
+      .size(2)
+      .style({
+        fill: 'black',
+        // fill: 'white',
+        fillOpacity: 1
+        // lineWidth: 1,
+        // stroke: 'black',
+      })
+      .tooltip('y', value => {
+        return {
+          name: 'Q1-Q3',
+          value
+        };
+      });
+
+    // median
+    const view4 = chart.view();
+    view4.source(dv4);
+    view4.point()
+      .position('key*y')
+      .color('black')
+      .size(3)
+      .style({
+        fill: 'white',
+        stroke: 'black',
+        lineWidth: 2
+      })
+      .tooltip('y', value => {
+        return {
+          name: 'Median',
+          value
+        };
+      });
+
     chart.render();
   });
 </script>
